DATAREST-397 - Verify Spring Data REST integrates properly with Spring Security
* Spring Data REST should be easy to apply method-level security controls. This issue contains a battery of tests verifying that method level security works as expected.
* The reference docs now include a security section as well.
* This is also demonstrated by some canonical samples found in https://github.com/spring-projects/spring-data-examples/issues/21

> **NOTE:** The only Spring Security dependencies added in this commit are test-scoped, meaning they don't add any extra depdencies to users of Spring Data REST.

--- a/src/main/asciidoc/projections-excerpts.adoc
+++ b/src/main/asciidoc/projections-excerpts.adoc
@@ -188,7 +188,7 @@ Projection definitions will be picked up and made available for clients if they 
 * Manually registered via `RepositoryRestConfiguration.projectionConfiguration().addProjection(…)`.
 ====
 
-[[projections-excerpts.hidden-data]]
+[[projections-excerpts.projections.hidden-data]]
 === Bringing in hidden data
 
 So far, you have seen how projections can be used to reduce the information that is presented to the user. Projections can also bring in normally unseen data. For example, Spring Data REST will ignore fields or getters that are marked up with `@JsonIgnore` annotations. Look at the following domain object:
